src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width {  }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 0 × 336, bounds: 1248 × 688, states: []
size: 1 × 336, bounds: 1248 × 688, states: [Activated]
