src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width {  }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 0 × 680, bounds: 1240 × 680, states: []
size: 1 × 680, bounds: 1240 × 680, states: [Activated]
